--- a/.gitignore
+++ b/.gitignore
@@ -20,9 +20,14 @@ coverage
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
+!.vscode/settings.json
 .idea
 *.suo
 *.ntvs*
 *.njsproj
 *.sln
 *.sw?
+
+/src/typings/components.d.ts
+package-lock.json
+yarn.lock
