--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,5 +1,8 @@
 {
-  "endOfLine": "lf",
+  "endOfLine": "auto",
   "trailingComma": "none",
-  "printWidth": 120
+  "printWidth": 120,
+  "singleQuote": false,
+  "bracketSpacing": true,
+  "arrowParens": "avoid"
 }
