--- a/package.json
+++ b/package.json
@@ -3,22 +3,37 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "dev": "vite",
-    "build": "run-p type-check build-only",
+    "dev": "cross-env VITE_SERVICE_ENV=dev vite",
+    "dev:test": "cross-env VITE_SERVICE_ENV=test vite",
+    "dev:prod": "cross-env VITE_SERVICE_ENV=prod vite",
+    "build": "npm run typecheck && cross-env VITE_SERVICE_ENV=prod vite build",
+    "build:dev": "npm run typecheck && cross-env VITE_SERVICE_ENV=dev vite build",
+    "build:test": "npm run typecheck && cross-env VITE_SERVICE_ENV=test vite build",
+    "build:vercel": "cross-env VITE_HASH_ROUTE=Y VITE_VERCEL=Y vite build",
     "preview": "vite preview",
     "build-only": "vite build",
-    "type-check": "vue-tsc --noEmit",
-    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore"
+    "type-check": "vue-tsc --noEmit --skipLibCheck",
+    "lint": "eslint . --fix"
   },
   "dependencies": {
+    "@vueuse/core": "^9.10.0",
+    "axios": "^1.2.2",
+    "crypto-js": "^4.1.1",
+    "dayjs": "^1.11.7",
     "element-plus": "^2.2.28",
+    "lodash-es": "^4.17.21",
+    "nprogress": "^0.2.0",
     "pinia": "^2.0.28",
+    "qs": "^6.11.0",
     "vue": "^3.2.45",
     "vue-router": "^4.1.6"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.1.4",
+    "@types/crypto-js": "^4.1.1",
     "@types/node": "^18.11.12",
+    "@types/nprogress": "^0.2.0",
+    "@types/qs": "^6.9.7",
     "@vitejs/plugin-vue": "^4.0.0",
     "@vue/eslint-config-prettier": "^7.0.0",
     "@vue/eslint-config-typescript": "^11.0.0",
@@ -31,10 +46,11 @@
     "postcss": "^8.4.21",
     "prettier": "^2.7.1",
     "tailwindcss": "^3.2.4",
-    "typescript": "~4.7.4",
+    "typescript": "^4.7.4",
     "unplugin-auto-import": "^0.12.1",
     "unplugin-vue-components": "^0.22.12",
     "vite": "^4.0.0",
+    "vite-plugin-html": "^3.2.0",
     "vue-tsc": "^1.0.12"
   }
 }
